@@ -22,6 +22,7 @@ Direct3D 10
 	* Added missing WARP device type.
 	* Fixed shader compilation to allow null entry points.
 	* Fixed ShaderSignature Get*Signature methods.
+	* Added overloads to EffectVectorVariable.Set to take color inputs.
 	
 Direct3D 11
 	* Dropped stream size checks in texture ToStream functions.
@@ -30,10 +31,12 @@ Direct3D 11
 	* Added Texture2D.ComputeNormalMap.
 	* Added ShaderResourceView.FromFile, ShaderResourceView.FromMemory and ShaderResourceView.FromStream.
 	* Added Resource.LoadTextureFromTexture and Resource.FilterTexture.
+	* Added Resource.AsSurface to retrieve a DXGI Surface from a resource.
 	* Fixed shader compilation to allow null entry points.
 	* Added new overloads for CreateDeviceWithSwapChain that better prevent argument errors. Old overloads have been deprecated.
 	* Fixed the Device.GetSupportedFeatureLevel functions.
 	* Fixed ShaderSignature Get*Signature methods.
+	* Added overloads to EffectVectorVariable.Set to take color inputs.
 	
 Windows
 	* Added several overloads to MessagePump.Run to allow access to corresponding Application.Run overloads.
